master: フラグ管理の修正

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,14 @@ label{
   justify-content: center;
 }
 
+.loading{
+  font-size: 16px;
+  text-align: center;
+}
+.loading.is-none{
+  display: none;
+}
+
 #video{
   position: absolute;
   top: 0;
